seishun overflow fix

--- a/css/style_seishunmk1.css
+++ b/css/style_seishunmk1.css
@@ -1,5 +1,5 @@
 body, html {
-    overflow-y: hidden;
+    overflow-x: hidden;
     height: 100%;
 }
 
